add logout, follow & Unfollow & notification
